--- a/UE5Coro.uplugin
+++ b/UE5Coro.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "2.0",
+	"VersionName": "2.0.1-RC",
 	"FriendlyName": "UE5Coro",
 	"Description": "C++20 coroutine implementation for Unreal Engine",
 	"Category": "Programming",
@@ -13,7 +13,7 @@
 	"EnabledByDefault": true,
 	"CanContainContent": false,
 	"CanContainVerse": false,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
